Fix CSS border spacing and add padding to table cells

--- a/thisisacssfile.css
+++ b/thisisacssfile.css
@@ -1,6 +1,12 @@
 table, th, td {
   border: 1px solid white;
-  border-spacing:0 lem;
+  border-collapse:collapse;
+}
+th, td {
+  padding-top:5px;
+  padding-bottom:5px;
+  padding-left:2.5px;
+  padding-right:2.5px;
 }
 .center {
   margin-left: auto;
